# Solar-Backup

./: CMakeLists.txt  README.md  main.cpp  package-lock.json  package.json  resources.qrc  tsconfig.json
.github/workflows/: build.yml
i18n/: zh_hans.qm  zh_hans.ts
src/: App.vue  Home.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src/backup/: Home.vue
src/i18n/: zh-cn.ts
src/plan/: Home.vue
view/: Button.qml  mainpage.qml
